[package]
name = "unocss-classes"
version = "1.0.0"
edition = "2021"
description = "HTML class builder macro with UnoCSS variant group transformer for web frameworks"
repository = "https://github.com/brofrain/unocss-classes-rs"
homepage = "https://github.com/brofrain/unocss-classes-rs"
license = "MIT"
keywords = [
  "unocss",
  "windicss",
  "atomic-css",
  "yew",
  "dioxus",
  "leptos",
  "ui",
  "gui",
  "dom",
  "wasm",
  "web",
]

[workspace]
resolver = "2"
members = ["packages/macros", "packages/utils"]
exclude = ["examples"]

[workspace.dependencies]
macros = { path = "packages/macros" }
utils = { path = "packages/utils" }

[dependencies]
macros.workspace = true
utils = { workspace = true, optional = true }
classes = "1.0.0"

[features]
runtime = ["dep:utils"]
