[workspace]
resolver = "2"
members = [
  "packages/unocss-classes",
  "packages/unocss-classes-macros",
  "packages/unocss-classes-utils",
]
exclude = ["examples"]

[workspace.package]
version = "1.0.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/brofrain/unocss-classes-rs"
homepage = "https://github.com/brofrain/unocss-classes-rs"
license = "MIT"

[workspace.dependencies]
unocss-classes = { path = "packages/unocss-classes", version = "1.0.0" }
unocss-classes-macros = { path = "packages/unocss-classes-macros", version = "1.0.0" }
unocss-classes-utils = { path = "packages/unocss-classes-utils", version = "1.0.0" }
